<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    style="@style/baseLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <EditText
        android:id="@+id/reg_usuario_password_ediT"
        style="@style/textBase.editField.password"
        tools:ignore="LabelFor"/>

    <EditText
        android:id="@+id/reg_usuario_password_confirm_ediT"
        style="@style/textBase.editField.password"
        android:hint="@string/usuario_password_confirm_hint"
    />

</LinearLayout>