...
    />

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal">
        <EditText
            android:id="@+id/reg_usercomu_portal_ed"
            style="@style/textBase.editField"
            android:hint="@string/reg_usercomu_portal_hint"
            android:inputType="textCapWords"
            android:maxEms="10"
            android:layout_weight="1"
            android:gravity="center"
...
