<resources>
    <!-- To be used in a test in ComuEspressoTestUtil -->
    <string name="tipoVia_spinner_default">tipo de vía</string>
    <string name="comAutonoma_spinner_default">comunidad autónoma</string>
    <string name="provincia_spinner_default">provincia</string>
    <string name="municipio_spinner_default">municipio</string>
</resources>
