package com.didekindroid.usuario.activity;

import android.content.Intent;
import android.support.test.espresso.intent.rule.IntentsTestRule;
import android.support.test.runner.AndroidJUnit4;

import com.didekin.usuario.dominio.Comunidad;
import com.didekin.usuario.dominio.Municipio;
import com.didekin.usuario.dominio.Provincia;
import com.didekindroid.R;
import com.didekindroid.common.activity.UiException;
import com.didekindroid.usuario.testutils.CleanUserEnum;

import org.junit.After;
import org.junit.Before;
import org.junit.BeforeClass;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import java.io.IOException;

import static android.support.test.espresso.Espresso.onData;
import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.action.ViewActions.click;
import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
import static android.support.test.espresso.action.ViewActions.replaceText;
import static android.support.test.espresso.action.ViewActions.scrollTo;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.intent.Intents.intended;
import static android.support.test.espresso.intent.matcher.IntentMatchers.hasExtra;
import static android.support.test.espresso.matcher.CursorMatchers.withRowString;
import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withParent;
import static android.support.test.espresso.matcher.ViewMatchers.withText;
import static com.didekindroid.common.activity.BundleKey.COMUNIDAD_ID;
import static com.didekindroid.common.testutils.ActivityTestUtils.checkToastInTest;
import static com.didekindroid.common.testutils.ActivityTestUtils.checkUp;
import static com.didekindroid.common.testutils.ActivityTestUtils.cleanOptions;
import static com.didekindroid.common.testutils.ActivityTestUtils.signUpAndUpdateTk;
import static com.didekindroid.common.utils.UIutils.isRegisteredUser;
import static com.didekindroid.usuario.testutils.CleanUserEnum.CLEAN_JUAN;
import static com.didekindroid.usuario.testutils.UserMenuTestUtils.SEE_USERCOMU_BY_COMU_AC;
import static com.didekindroid.usuario.testutils.UsuarioTestUtils.COMU_LA_PLAZUELA_5;
import static com.didekindroid.usuario.testutils.UsuarioTestUtils.COMU_PLAZUELA5_JUAN;
import static com.didekindroid.usuario.webservices.UsuarioService.ServOne;
import static org.hamcrest.CoreMatchers.allOf;
import static org.hamcrest.Matchers.containsString;
import static org.hamcrest.Matchers.is;
import static org.hamcrest.Matchers.notNullValue;
import static org.junit.Assert.assertThat;

/**
 * User: pedro@didekin
 * Date: 01/10/15
 * Time: 09:41
 */
@RunWith(AndroidJUnit4.class)
public class ComuDataAcTest {

    private ComuDataAc mActivity;
    CleanUserEnum whatToClean = CLEAN_JUAN;
    Comunidad mComunidad;
    int activityLayoutId = R.id.comu_data_ac_layout;

    @Rule
    public IntentsTestRule<ComuDataAc> intentRule = new IntentsTestRule<ComuDataAc>(ComuDataAc.class) {
        @Override
        protected void beforeActivityLaunched()
        {
        }

        @Override
        protected Intent getActivityIntent()
        {
            try {
                signUpAndUpdateTk(COMU_PLAZUELA5_JUAN);
                mComunidad = ServOne.getComusByUser().get(0);
            } catch (UiException | IOException e) {
                e.printStackTrace();
            }
            Intent intent = new Intent();
            intent.putExtra(COMUNIDAD_ID.key, mComunidad.getC_Id());
            return intent;
        }
    };

    @BeforeClass
    public static void slowSeconds() throws InterruptedException
    {
        Thread.sleep(5000);
    }

    @Before
    public void setUp() throws Exception
    {
        mActivity = intentRule.getActivity();
    }

    @After
    public void tearDown() throws Exception
    {
        cleanOptions(whatToClean);
    }

//    =============================================================================================

    @Test
    public void testOnCreate() throws Exception
    {
        assertThat(isRegisteredUser(mActivity), is(true));
        assertThat(mActivity.mIdComunidad > 0, is(true));
        assertThat(mActivity.mAcView, notNullValue());
        assertThat(mActivity.mRegComuFrg, notNullValue());

        onView(withId(activityLayoutId)).check(matches(isDisplayed()));

        onView(withId(R.id.comunidad_nombre_via_editT))
                .check(matches(withText(is(mComunidad.getNombreVia()))))
                .check(matches(isDisplayed()));
        onView(withId(R.id.comunidad_numero_editT))
                .check(matches(withText(containsString(String.valueOf(mComunidad.getNumero())))))
                .check(matches(isDisplayed()));
        onView(withId(R.id.comunidad_sufijo_numero_editT))
                .check(matches(withText(is(mComunidad.getSufijoNumero()))))
                .check(matches(isDisplayed()));

        assertThat(mActivity.mRegComuFrg.getComunidadBean().getTipoVia(), is(mComunidad.getTipoVia()));

        onView(allOf(withId(R.id.app_spinner_1_dropdown_item), withParent(withId(R.id.tipo_via_spinner))))
                .check(matches(withText(is(mComunidad.getTipoVia())))).check(matches(isDisplayed()));

        onView(allOf(withId(R.id.app_spinner_1_dropdown_item), withParent(withId(R.id.autonoma_comunidad_spinner))))
                .check(matches(withText(is("Galicia")))).check(matches(isDisplayed()));
        onView(allOf(withId(R.id.app_spinner_1_dropdown_item), withParent(withId(R.id.provincia_spinner))))
                .check(matches(withText(is("Lugo")))).check(matches(isDisplayed()));
        onView(allOf(withId(R.id.app_spinner_1_dropdown_item), withParent(withId(R.id.municipio_spinner))))
                .check(matches(withText(is("Alfoz")))).check(matches(isDisplayed())).perform(closeSoftKeyboard());

        onView(withId(R.id.comu_data_ac_button)).check(matches(isDisplayed()));

        assertThat(mActivity.mRegComuFrg.getComunidadBean().getMunicipio().getProvincia().getProvinciaId(), is
                (COMU_LA_PLAZUELA_5.getMunicipio().getProvincia().getProvinciaId()));
        assertThat(mActivity.mRegComuFrg.getComunidadBean().getMunicipio().getCodInProvincia(), is
                (COMU_LA_PLAZUELA_5.getMunicipio().getCodInProvincia()));
    }

    @Test
    public void testModifyComuData_1() throws UiException, InterruptedException
    {
        // Comunidad data.
        onView(withId(R.id.comunidad_nombre_via_editT)).perform(scrollTo(), replaceText("nombre via One"));
        onView(withId(R.id.comunidad_numero_editT)).perform(scrollTo(), replaceText("123"));
        onView(withId(R.id.comunidad_sufijo_numero_editT)).perform(scrollTo(), replaceText("Tris"));

        onView(withId(R.id.autonoma_comunidad_spinner)).perform(click());
        Thread.sleep(1000);
        onData(withRowString(1, "Valencia")).perform(click());

        onView(withId(R.id.provincia_spinner)).perform(click());
        Thread.sleep(1000);
        onData(withRowString(1, "Valencia/València")).perform(click());

        onView(withId(R.id.municipio_spinner)).perform(click());
        Thread.sleep(1000);
        onData(withRowString(3, "Ènova, l'")).perform(click());

        // Modificamos.
        onView(withId(R.id.comu_data_ac_button)).check(matches(isDisplayed())).perform(click());
        // Verificamos cambios.
        onView(withId(R.id.see_usercomu_by_user_frg)).check(matches(isDisplayed()));
        Comunidad comunidadDb = ServOne.getComuData(mComunidad.getC_Id());
        assertThat(comunidadDb != null ? comunidadDb.getMunicipio() : null, is(new Municipio((short) 119, new Provincia((short) 46))));
        assertThat(comunidadDb != null ? comunidadDb.getNombreVia() : null, is("nombre via One"));
        assertThat(comunidadDb != null ? comunidadDb.getNumero() : 0,is((short) 123));
        assertThat(comunidadDb != null ? comunidadDb.getSufijoNumero() : null,is("Tris"));

        checkUp(activityLayoutId);
    }

    @Test
    public void testModifyComuData_2() throws UiException
    {
        onView(withId(R.id.comu_data_ac_button)).check(matches(isDisplayed())).perform(scrollTo(), click());
        onView(withId(R.id.see_usercomu_by_user_frg)).check(matches(isDisplayed())).perform(closeSoftKeyboard());

        Comunidad comunidadDb = ServOne.getComuData(mComunidad.getC_Id());
        assertThat(comunidadDb != null ? comunidadDb.getMunicipio() : null, is(COMU_LA_PLAZUELA_5.getMunicipio()));
        assertThat(comunidadDb != null ? comunidadDb.getNombreVia() : null, is(COMU_LA_PLAZUELA_5.getNombreVia()));

        checkUp(activityLayoutId);
    }

    @Test
    public void testModifyComuData_3()
    {
        onView(withId(R.id.autonoma_comunidad_spinner)).perform(click());
        onData(withRowString(1, "comunidad autónoma")).perform(click());

        onView(allOf(withId(R.id.app_spinner_1_dropdown_item), withParent(withId(R.id.autonoma_comunidad_spinner))))
                .check(matches(withText(is("comunidad autónoma")))).check(matches(isDisplayed()));
        onView(allOf(withId(R.id.app_spinner_1_dropdown_item), withParent(withId(R.id.provincia_spinner))))
                .check(matches(withText(is("provincia")))).check(matches(isDisplayed()));
        onView(allOf(withId(R.id.app_spinner_1_dropdown_item), withParent(withId(R.id.municipio_spinner))))
                .check(matches(withText(is("municipio")))).check(matches(isDisplayed()));

        onView(withId(R.id.comu_data_ac_button)).check(matches(isDisplayed())).perform(scrollTo(), click());
        checkToastInTest(R.string.error_validation_msg, mActivity, R.string.municipio);
    }

//     ==================== MENU ====================

    @Test
    public void testSeeUserComuByComuMn() throws InterruptedException
    {
        SEE_USERCOMU_BY_COMU_AC.checkMenuItem_WTk(mActivity);
        intended(hasExtra(COMUNIDAD_ID.key,mComunidad.getC_Id()));
        checkUp(activityLayoutId);
    }
}